# Qwen3-0.6B-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
configs/: ds_z2_no_offload.json
model/: .msc  .mv  config.py  modeling.py
trainer/: pretrain.py
utils/: preprocess.py
