[project]
name = "qwen3-0-6b-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "modelscope>=1.27.1",
    "peft>=0.15.2",
    "swanlab>=0.6.4",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.19.0",
]
